kubetrain-k8s/local/theia-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubetrain
spec:
  template:
    spec:
      nodeSelector: {}
      tolerations: {}
