kubetrain-k8s/local/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  type: ExternalName
  externalName: oauth2-proxy.oauth2-proxy.svc.cluster.local

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubetrain
  annotations:
    # nginx.ingress.kubernetes.io/auth-url: "http://$host/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "http://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  rules:
  - host: kubedev.k3d.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubetrain
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubetrain-oauth2-proxy
spec:
  rules:
  - host: kubedev.k3d.localhost
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
